--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 absl-py==0.15.0
+accelerate==0.14.0
+aiohttp==3.8.3
+aiosignal==1.3.1
 alabaster==0.7.12
 alembic @ file:///home/conda/feedstock_root/build_artifacts/alembic_1622150326904/work
 altair==4.1.0
@@ -7,6 +10,7 @@ appdirs @ file:///home/conda/feedstock_root/build_artifacts/appdirs_160310839579
 argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1610522573621/work
 astunparse==1.6.3
 async-generator==1.10
+async-timeout==4.0.2
 attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1620387926260/work
 Babel @ file:///home/conda/feedstock_root/build_artifacts/babel_1619719576210/work
 backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
@@ -38,18 +42,22 @@ Cython @ file:///home/conda/feedstock_root/build_artifacts/cython_1626221483532/
 cytoolz==0.11.0
 dask @ file:///home/conda/feedstock_root/build_artifacts/dask-core_1624381896452/work
 datascience==0.17.0
+datasets==2.7.1
 debugpy @ file:///home/conda/feedstock_root/build_artifacts/debugpy_1620178545075/work
 decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1621187651333/work
 defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
-dill @ file:///home/conda/feedstock_root/build_artifacts/dill_1623610058511/work
+dill==0.3.6
 distributed @ file:///home/conda/feedstock_root/build_artifacts/distributed_1624400618710/work
 docopt==0.6.2
 docutils==0.17.1
 entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1605121927639/work/dist/entrypoints-0.3-py2.py3-none-any.whl
 env-backup @ file:///tmp/local-env-backup
+evaluate==0.3.0
+filelock==3.8.0
 flatbuffers==1.12
 folium==0.12.1.post1
-fsspec @ file:///home/conda/feedstock_root/build_artifacts/fsspec_1626188337504/work
+frozenlist==1.3.3
+fsspec==2022.11.0
 fuzzywuzzy==0.18.0
 gast==0.4.0
 gmpy2==2.1.0b5
@@ -61,6 +69,7 @@ greenlet @ file:///home/conda/feedstock_root/build_artifacts/greenlet_1620327502
 grpcio==1.42.0
 h5py==3.1.0
 HeapDict==1.0.1
+huggingface-hub==0.11.0
 idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1609836280497/work
 imagecodecs @ file:///home/conda/feedstock_root/build_artifacts/imagecodecs_1623996805221/work
 imageio @ file:///home/conda/feedstock_root/build_artifacts/imageio_1594044661732/work
@@ -105,6 +114,8 @@ mistune @ file:///home/conda/feedstock_root/build_artifacts/mistune_162494131777
 mock @ file:///home/conda/feedstock_root/build_artifacts/mock_1610147502688/work
 mpmath @ file:///home/conda/feedstock_root/build_artifacts/mpmath_1612895720168/work
 msgpack @ file:///home/conda/feedstock_root/build_artifacts/msgpack-python_1610121709200/work
+multidict==6.0.2
+multiprocess==0.70.14
 nbclassic @ file:///home/conda/feedstock_root/build_artifacts/nbclassic_1621947328608/work
 nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1614336084111/work
 nbconvert==5.6.1
@@ -121,6 +132,7 @@ notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1621259862
 numba @ file:///home/conda/feedstock_root/build_artifacts/numba_1623568543876/work
 numexpr @ file:///home/conda/feedstock_root/build_artifacts/numexpr_1614971350662/work
 numpy==1.19.5
+nvidia-ml-py3==7.352.0
 oauthlib @ file:///home/conda/feedstock_root/build_artifacts/oauthlib_1622563202229/work
 olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
 oo-tools==0.2.0
@@ -146,6 +158,7 @@ protobuf==3.17.2
 psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1610127095958/work
 ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
 py==1.11.0
+pyarrow==10.0.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycocotools==2.0.3
@@ -178,6 +191,7 @@ regex==2021.11.10
 requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1626393743643/work
 requests-oauthlib==1.3.0
 requests-unixsocket==0.2.0
+responses==0.18.0
 rise @ file:///home/conda/feedstock_root/build_artifacts/rise_1637085183436/work
 rpy2 @ file:///home/conda/feedstock_root/build_artifacts/rpy2_1622826795397/work
 rsa==4.8
@@ -221,14 +235,16 @@ text-unidecode==1.3
 threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1626092076920/work
 tifffile @ file:///home/conda/feedstock_root/build_artifacts/tifffile_1625322421387/work
 timeout-decorator==0.5.0
+tokenizers==0.13.2
 toml==0.10.2
 toolz @ file:///home/conda/feedstock_root/build_artifacts/toolz_1600973991856/work
 torch==1.9.0+cu111
 torchaudio==0.9.0
 torchvision==0.10.0+cu111
 tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1610094708661/work
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1625664838498/work
+tqdm==4.64.1
 traitlets==4.3.3
+transformers==4.24.0
 typing-extensions==3.7.4.3
 tzlocal @ file:///home/conda/feedstock_root/build_artifacts/tzlocal_1588939190034/work
 urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1624634538755/work
@@ -239,5 +255,7 @@ Werkzeug==2.0.2
 widgetsnbextension @ file:///home/conda/feedstock_root/build_artifacts/widgetsnbextension_1605475529901/work
 wrapt==1.12.1
 xlrd @ file:///home/conda/feedstock_root/build_artifacts/xlrd_1610224409810/work
+xxhash==3.1.0
+yarl==1.8.1
 zict==2.0.0
 zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1625284368454/work
